# zephyr_app

./: .editorconfig
esp32/: .editorconfig  CMakeLists.txt  Kconfig  prj.conf
esp32/board/support/: openocd.cfg
esp32/link/: linker.ld
esp32/src/: main.c  main.h
esp32/tools/: gdb.sh  openocd.sh
hello_world/: CMakeLists.txt  custom-rodata.ld  custom-rwdata.ld  prj.conf
hello_world/bullseye/: libcov.h
hello_world/cmake/compiler/gcc/: generic.cmake  target.cmake
hello_world/cmake/toolchain/cross-compile/: generic.cmake
stm32f7/: .editorconfig  CMakeLists.txt  Kconfig  prj.conf  prj1.conf  prj2.conf
stm32f7/bullseye/: atomic.h  libcov-core-small.h  libcov-userDefined-small.c  version.h
stm32f7/cmake/: common.cmake
stm32f7/common/inc/: common.h  helper.h
stm32f7/common/src/: helper.c  init_log.c
stm32f7/drivers/: CMakeLists.txt
stm32f7/drivers/serial/: uart.c
stm32f7/drivers/timer_encoder/: CMakeLists.txt  timer_encoder.c  timer_encoder_handler.c
stm32f7/drivers/wifi/: CMakeLists.txt  esp32_core.c  esp33.c  (+4 more)
stm32f7/dts/: stm32f7.overlay.dts
stm32f7/include/: helper.h  timer_encoder.h
stm32f7/link/: custom-sections.ld
stm32f7/scripts/: parse_test_config.py
stm32f7/src/: bme280.c  bullseye.c  codetab.h  device_list.c  encoder_run.c  hello_world.c  i2c_24c02.c  led.c  main.c  oled.c  test.c  test_asm.c  test_base.c  test_esp32_spi.c  test_esp32_uart.c  test_key.c  test_main.c  test_pwm.c  test_section.c  test_spi.c  test_thread.c  test_thread_wrap.c  test_uart.c  thread.c
stm32f7/sys/: pinmux.c
tools/: hello.py  settings.json  tool.py
(+21 files in other folders)
